--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,16 @@ main section{
     margin: 1px 0px 1px 0px ;
 }
 
-footer{
+    
+footer section{
     display:flex;
+    flex-direction: column;
+}
+.liens_pratiques{
+    display:flex; 
+   
+}
+.liens_generaux{
+    background-color:rgb(198, 205, 211);
+   
 }
